# dev2025

./: .gitattributes  CMakeLists.txt  README.md  _dev_mingw64_1706.bat  build_mingw64_1706_Debug_shared.sh  build_mingw64_1706_Debug_static.sh  build_mingw64_1706_RelWithDebInfo_shared.sh  build_mingw64_1706_RelWithDebInfo_static.sh  build_mingw64_1706_Release_shared.sh  build_mingw64_1706_Release_static.sh  clean_all.sh  collect_ftime_traces.sh
src/: CMakeLists.txt  embed_static_runtime.cmake
src/0_tools/: CMakeLists.txt
src/0_tools/de-file2header/: CMakeLists.txt
src/0_tools/de-file2header/res/: resource.rc
src/0_tools/de-file2header/src/: main_file2header.cpp
src/0_tools/de-nasm-2.14.02/: CMakeLists.txt
src/0_tools/de-nasm-2.14.02/res/: resource.rc
src/1_libs/: CMakeLists.txt
src/1_libs/DarkCoverArt-25.04/: CMakeLists.txt
src/1_libs/DarkCoverArt-25.04/res/: resource.rc
src/1_libs/DarkCoverArt-25.04/test/: s.txt
src/1_libs/DarkImage-25.04/: CMakeLists.txt
src/1_libs/DarkImage-25.04/include/: DarkImage.h
src/1_libs/DarkImage-25.04/res/: de_resource.h
src/1_libs/DarkImage-25.04/test/: CMakeLists.txt
src/1_libs/DarkMidi-25.04/: CMakeLists.txt  _bk.7z  dro2midi.7z
src/1_libs/DarkMidi-25.04/test/: CMakeLists.txt
src/1_libs/_libarchive/: CMakeLists.txt
src/1_libs/_libarchive/de-archive-3.8.1/: CMakeLists.txt
src/1_libs/_libarchive/de-b2-0.98.1/: CMakeLists.txt
src/1_libs/_libarchive/de-bzip2-1.0.5/: CMakeLists.txt
src/1_libs/_libarchive/de-cpio-1.0.0/: CMakeLists.txt
src/1_libs/_libarchive/de-deflate-1.23/: CMakeLists.txt
src/1_libs/_libassimp/: CMakeLists.txt
src/1_libs/_libaudio/: CMakeLists.txt
src/1_libs/_libcad/: CMakeLists.txt  de-gmp-6.1.2.7z
src/1_libs/_libdatabase/: CMakeLists.txt
src/1_libs/_libextra/: CMakeLists.txt  de-dvdcss.7z  de-dvdnav.7z  de-dvdread.7z  de-ginac.7z
src/1_libs/_libgpu/: CMakeLists.txt  de-opencl.7z
src/1_libs/_libimage/: CMakeLists.txt
src/1_libs/_libnetwork/: CMakeLists.txt
src/1_libs/de-25.04/: CMakeLists.txt
src/2_demos/: CMakeLists.txt
src/2_demos/AVX_Mandelbrot_de_glew/: CMakeLists.txt
src/2_demos/AVX_Mandelbrot_glfw_glad/: CMakeLists.txt
src/2_demos/AzimutProjection_glew_wgl/: CMakeLists.txt
src/2_demos/CNC_Parser/: CMakeLists.txt
src/2_demos/MidiParser/: CMakeLists.txt
src/2_demos/Raytracing_glfw_glew/: CMakeLists.txt  Raytracing_Readme.txt
src/2_demos/ShaderArt_wgl_glew/: CMakeLists.txt
src/2_demos/_irrlicht/: CMakeLists.txt
src/2_demos/_qt/: CMakeLists.txt
src/2_demos/_tutorials_AntonsOpenGL_glew/: CHANGELOG.txt  CMakeLists.txt  README.md
src/2_demos/_tutorials_LearnOpenGL_glad/: CMakeLists.txt
src/2_demos/_tutorials_NorbertsTutorials_glew/: CMakeLists.txt
src/2_demos/_wx/: RtAudioCfgDlg-wx.7z  irfanview-wx.7z  mspaint-wx.7z
src/2_demos/minimal_vst2x_host/: CMakeLists.txt
src/3_broken/: CMakeLists.txt
src/ActiveWallpaper/: CMakeLists.txt
src/ActiveWallpaper/ActiveWallpaper/: glow3.html
src/ActiveWallpaper/ResetActiveWallpaper/: CMakeLists.txt  ResetActiveWallpaper.cpp
src/ActiveWallpaper/SetActiveWallpaper/: CMakeLists.txt  SetActiveWallpaper.cpp
src/BespokeSynth/: CMakeLists.txt
src/BespokeSynth/lib/: CMakeLists.txt
src/BespokeSynth/res/: app.manifest  resource.rc
src/BespokeSynth/src/: ADSRDisplay.h  AbletonLink.cpp  AbletonLink.h  AbletonMoveControl.cpp  AbletonMoveLCD.cpp  Arpeggiator.h  ButterworthFilterEffect.h  ClickButton.cpp  ClickButton.h  CodeEntry.h  ControlRecorder.cpp  ControlRecorder.h  ControlSequencer.cpp  DotGrid.h  DropdownList.cpp  EffectFactory.cpp  EnvelopeEditor.cpp  FloatSliderLFOControl.cpp  FloatSliderLFOControl.h  FubbleModule.cpp  GridController.h  HelpDisplay.cpp  HelpDisplay.h  IClickable.h  IDrawableModule.cpp  IDrawableModule.h  IModulator.cpp  INoteReceiver.h  IUIControl.h  LocationZoomer.h  MPESmoother.h  MPETweaker.h  MidiControlChange.h  MidiController.h  ModulatorCurve.cpp  ModuleFactory.cpp  NoteChance.cpp  NoteCounter.h  NoteExpressionRouter.h  NoteHumanizer.cpp  (+36 more)
src/F3_FreeLancer/: CMakeLists.txt
src/F3_FreeLancer/res/: resource.rc
src/F3_FreeLancer/src/: main.cpp
src/H3_Siedler/: CMakeLists.txt  TODO.txt
src/H3_Siedler/res/: resource.qrc  resource.rc
src/H3_Siedler/src/: main.cpp
src/SonnenSystem_glfw_glew/: CMakeLists.txt  tess.cpp
src/SonnenSystem_glfw_glew/res/: app.manifest
src/SonnenSystem_glfw_glew/src/: Body.cpp  Body.h  BodyRenderer.cpp  BodyRenderer.h  OpenGLBridge.cpp  OpenGLBridge.h  SonSys_Common.h  eBT_PlanetMesh.cpp  eBT_PlanetMesh.h  eBT_PlanetRenderer.cpp  eBT_PlanetRenderer.h  main_SonnenSystem_glfw_glew.cpp
src/raylib/: CMakeLists.txt
src/raylib/GameBallistic/: CMakeLists.txt
src/raylib/GameBattleship/: CMakeLists.txt
src/raylib/GameSnake/: CMakeLists.txt
src/raylib/de-dr_flac-0.13.2/: CMakeLists.txt  tests.7z
src/raylib/de-dr_mp3-0.7.2/: CMakeLists.txt
src/raylib/de-dr_wav-0.14.1/: CMakeLists.txt
src/raylib/de-miniaudio-0.11.23/: CMakeLists.txt
src/raylib/de-raygui-5.0/: CMakeLists.txt
src/raylib/de-raylib-5.6/: CMakeLists.txt
src/raylib/de-raylib-glfw/: CMakeLists.txt
src/raylib/de-rlgl-5.0/: CMakeLists.txt
src/vcv-rack2/: CMakeLists.txt
src/vcv-rack2/VCV-Rack2/: CMakeLists.txt
src/vcv-rack2/de-rack2-asiosdk-2.3/: CMakeLists.txt
src/vcv-rack2/de-rack2-filesystem/: CMakeLists.txt
src/vcv-rack2/de-rack2-fuzzysearchdatabase/: CMakeLists.txt
src/vcv-rack2/de-rack2-glew-2.1.0/: CMakeLists.txt
src/vcv-rack2/de-rack2-glfw/: CMakeLists.txt
src/vcv-rack2/de-rack2-jansson/: CMakeLists.txt
src/vcv-rack2/de-rack2-nanovg/: CMakeLists.txt
src/vcv-rack2/de-rack2-osdialog/: CMakeLists.txt
src/vcv-rack2/de-rack2-oui-blendish/: CMakeLists.txt
src/vcv-rack2/de-rack2-pffft/: CMakeLists.txt
src/vcv-rack2/de-rack2-rtaudio-5.1.0/: CMakeLists.txt
src/vcv-rack2/de-rack2-rtaudio-6.0.1/: CMakeLists.txt  test.7z
src/vcv-rack2/de-rack2-rtmidi-2.1.1/: CMakeLists.txt
src/vcv-rack2/de-rack2-speexdsp/: CMakeLists.txt
src/vcv-rack2/de-rack2-stb_image/: CMakeLists.txt
src/vcv-rack2/de-rack2-tinyexpr/: CMakeLists.txt
(+4992 files in other folders)
